--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/music_player.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/video.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button-round.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button-animated.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button_round.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button_animated.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/window_mac.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/window_old_mac.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_frame.css">
