--- a/_includes/layout_footer.html
+++ b/_includes/layout_footer.html
@@ -20,10 +20,10 @@
       <div class="footer-panel-list">
         <h6 class="footer-h6">Quick Links</h6>
         <ul class="footer-links-list">
-          <li class="footer-li"><a class="footer-a" href="{{ site.url }}/about/index.html">About Me</a></li>
           <li class="footer-li"><a class="footer-a" href="{{ site.url }}/posts/index.html">Blog Postings</a></li>
-          <li class="footer-li"><a class="footer-a" href="{{ site.url }}/gallery/index.html">Gallery</a></li>
           <li class="footer-li"><a class="footer-a" href="{{ site.url }}/creative/index.html">Creative</a></li>
+          <li class="footer-li"><a class="footer-a" href="{{ site.url }}/gallery/index.html">Gallery</a></li>
+          <li class="footer-li"><a class="footer-a" href="{{ site.url }}/music/index.html">Music</a></li>
           <li class="footer-li"><a class="footer-a" href="{{ site.url }}/sample/index.html">Sample Doc</a></li>
         </ul>
       </div>
