--- a/_includes/button_animated.html
+++ b/_includes/button_animated.html
@@ -1,4 +1,4 @@
 <button class="animated-button">
   <span class="circle" aria-hidden="true"><span class="icon arrow"></span></span>
-  <span class="button-text"><a href="{{ include.href }}">{{ include.title }}</span>
+  <span class="button-text"><a href="{{ include.href }}">{{ include.title }}</a></span>
 </button>
