--- a/assets/css/button_animated.css
+++ b/assets/css/button_animated.css
@@ -93,7 +93,7 @@ button.animated-button .button-text a {
 
 button.animated-button .button-text a:hover {
   background: none;
-  color: #bbb;
+  color: #282936;
 }
 
 button.animated-button:hover .circle {
