--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -1,9 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/main.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/syntax.css">
+
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/highlighter.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/footer.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/syntax.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/music_player.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/video.css">
@@ -13,6 +14,9 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/window_old_mac.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_frame.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_box.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/grid_profile_cycle.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/grid_profile_net.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/blockquote_layer.css">
 {% for css in page.prelink_css %}
 <link rel="stylesheet" href="{{ css }}">
