--- a/_includes/image_overlay_box.html
+++ b/_includes/image_overlay_box.html
@@ -1,27 +1,9 @@
-<figure class="snip1579"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample74.jpg" alt="profile-sample2"/>
+<figure class="snip1579"><img src="{{ include.image}}"/>
   <figcaption>
-    <h3>Sue Shei</h3>
-    <h5>Founder</h5>
+    <h3>{{ include.title }}</h3>
+    <h5>{{ include.subtitle }}</h5>
     <blockquote>
-      <p>'Which is worse, that everyone has his price, or that the price is always so low.'</p>
+      <p>{{ include.desc }}</p>
     </blockquote>
-  </figcaption><a href="#"></a>
-</figure>
-<figure class="snip1579"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample77.jpg" alt="profile-sample7"/>
-  <figcaption>
-    <h3>Indigo Violet</h3>
-    <h5>Web Designer</h5>
-    <blockquote>
-      <p>'I'm killing time while I wait for life to shower me with meaning and happiness.'</p>
-    </blockquote>
-  </figcaption><a href="#"></a>
-</figure>
-<figure class="snip1579"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample96.jpg" alt="profile-sample6"/>
-  <figcaption>
-    <h3>Will Barrow</h3>
-    <h5>Public Relations</h5>
-    <blockquote>
-      <p>'The only skills I have the patience to learn are those that have no real application in life.'</p>
-    </blockquote>
-  </figcaption><a href="#"></a>
+  </figcaption>{% if include.href.size > 0 %}<a href="{{ include.href }}"></a>{% endif %}
 </figure>
