--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -15,8 +15,8 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_frame.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_box.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/grid_profile_cycle.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/grid_profile_net.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_cycled.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/blockquote_layer.css">
 {% for css in page.prelink_css %}
 <link rel="stylesheet" href="{{ css }}">
