--- a/assets/css/card_profile_bordered.css
+++ b/assets/css/card_profile_bordered.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+sans);
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display);
-.snip1515 {
+.bordered-profile-card {
   font-family: 'Open Sans', Arial, sans-serif;
   position: relative;
   margin: 10px;
@@ -15,12 +15,27 @@
   box-shadow: none !important;
 }
 
-.snip1515 * {
+figure.bordered-profile-card h1:before,
+figure.bordered-profile-card h2:before,
+figure.bordered-profile-card h3:before,
+figure.bordered-profile-card h4:before,
+figure.bordered-profile-card h5:before,
+figure.bordered-profile-card h6:before,
+figure.bordered-profile-card h1:after,
+figure.bordered-profile-card h2:after,
+figure.bordered-profile-card h3:after,
+figure.bordered-profile-card h4:after,
+figure.bordered-profile-card h5:after,
+figure.bordered-profile-card h6:after {
+  content; none;
+}
+
+.bordered-profile-card * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.snip1515 .profile-image {
+.bordered-profile-card .profile-image {
   display: inline-block;
   width: 80%;
   z-index: 1;
@@ -29,12 +44,13 @@
   border: 2px solid #e8b563;
 }
 
-.snip1515 .profile-image img {
+.bordered-profile-card .profile-image img {
   max-width: 100%;
   vertical-align: top;
+  background-color: rgba(255,255,255,0.1);
 }
 
-.snip1515 figcaption {
+.bordered-profile-card figcaption {
   width: 100%;
   background-color: #F2F2F2;
   color: #555;
@@ -43,36 +59,36 @@
   display: inline-block;
 }
 
-.snip1515 h3,
-.snip1515 h4,
-.snip1515 p {
+.bordered-profile-card h3,
+.bordered-profile-card h4,
+.bordered-profile-card p {
   margin: 0 0 5px;
 }
 
-.snip1515 h3 {
+.bordered-profile-card h3 {
   font-weight: 600;
   font-size: 1.3em;
   font-family: 'Playfair Display', Arial, sans-serif;
 }
 
-.snip1515 h4 {
+.bordered-profile-card h4 {
   color: #8c8c8c;
   font-weight: 400;
   letter-spacing: 2px;
 }
 
-.snip1515 p {
+.bordered-profile-card p {
   font-size: 0.9em;
   letter-spacing: 1px;
   opacity: 0.9;
 }
 
-.snip1515 .icons {
+.bordered-profile-card .icons {
   text-align: center;
   width: 100%;
 }
 
-.snip1515 i {
+.bordered-profile-card i {
   padding: 10px 2px;
   display: inline-block;
   font-size: 18px;
@@ -81,7 +97,7 @@
   opacity: 0.75;
 }
 
-.snip1515 i:hover {
+.bordered-profile-card i:hover {
   opacity: 1;
   -webkit-transition: all 0.35s ease;
   transition: all 0.35s ease;
