--- a/assets/css/card_profile_bordered.css
+++ b/assets/css/card_profile_bordered.css
@@ -45,7 +45,7 @@ figure.bordered-profile-card h6:after {
 }
 
 .bordered-profile-card .profile-image img {
-  max-width: 100%;
+  width: 100%;
   vertical-align: top;
   background-color: rgba(255,255,255,0.1);
 }
