--- a/assets/css/card_profile_bordered.css
+++ b/assets/css/card_profile_bordered.css
@@ -27,7 +27,7 @@ figure.bordered-profile-card h3:after,
 figure.bordered-profile-card h4:after,
 figure.bordered-profile-card h5:after,
 figure.bordered-profile-card h6:after {
-  content; none;
+  content; none !important;
 }
 
 .bordered-profile-card * {
