--- a/_includes/card_profile_bordered.html
+++ b/_includes/card_profile_bordered.html
@@ -3,7 +3,7 @@
   <figcaption>
     <h3>{{ include.title }}</h3>
     <h4>{{ include.subtitle }}</h4>
-    <p>{{ include.desc }}</p>
+    <p class="bordered-profile-card-p">{{ include.desc }}</p>
     <div class="icons">
       {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="ion-ios-home"></i></a>{% endif %}
       {% if include.email.size > 0 %}<a href="mailto:{{ include.email }}"><i class="ion-ios-email"></i></a>{% endif %}
