--- a/assets/css/card_profile_cycled.css
+++ b/assets/css/card_profile_cycled.css
@@ -13,7 +13,7 @@ figure.cycled-profile-card h3:after,
 figure.cycled-profile-card h4:after,
 figure.cycled-profile-card h5:after,
 figure.cycled-profile-card h6:after {
-  content; '' !important;
+  display: none !important;
 }
 
 figure.cycled-profile-card {
