--- a/assets/css/card_profile_cycled.css
+++ b/assets/css/card_profile_cycled.css
@@ -20,7 +20,7 @@ figure.cycled-profile-card {
   font-family: 'Raleway', Arial, sans-serif;
   position: relative;
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto !important;
   min-width: 380px;
   max-width: 480px;
   width: 100%;
