--- a/_includes/layout_footer.html
+++ b/_includes/layout_footer.html
@@ -22,7 +22,7 @@
         <h6 class="footer-h6">Quick Links</h6>
         <ul class="footer-links-list">
           {% for link in site.data.footer.quicklinks %}
-          <li class="footer-li"><a class="footer-a" href="{{ link.url }}">{{ link.title }}</a></li>
+          <!-- <li class="footer-li"><a class="footer-a" href="{{ link.url }}">{{ link.title }}</a></li> -->
           {% endfor %}
         </ul>
       </div>
