--- a/_includes/image_overlay_box.html
+++ b/_includes/image_overlay_box.html
@@ -1,4 +1,4 @@
-<figure class="snip1579"><img src="{{ include.image}}"/>
+<figure class="overlay-image-box"><img src="{{ include.image}}"/>
   <figcaption>
     <h3>{{ include.title }}</h3>
     <h5>{{ include.subtitle }}</h5>
