--- a/assets/css/image_overlay_box.css
+++ b/assets/css/image_overlay_box.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://fonts.googleapis.com/css?family=Oswald);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-.snip1579 {
+.overlay-image-box {
   font-family: 'Lato', Arial, sans-serif;
   position: relative;
   display: inline-block;
@@ -16,17 +16,17 @@
   font-size: 16px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
-.snip1579 * {
+.overlay-image-box * {
   -webkit-transition: all 0.35s;
   transition: all 0.35s;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-.snip1579 img {
+.overlay-image-box img {
   max-width: 100%;
   vertical-align: top;
 }
-.snip1579 figcaption {
+.overlay-image-box figcaption {
   position: absolute;
   height: 75px;
   left: 15px;
@@ -36,7 +36,7 @@
   padding: 15px;
   background-color: rgba(0, 0, 0, 0.75);
 }
-.snip1579 h3 {
+.overlay-image-box h3 {
   font-family: 'Oswald';
   text-transform: uppercase;
   font-size: 20px;
@@ -44,27 +44,31 @@
   line-height: 24px;
   margin: 3px 0;
 }
-.snip1579 h5 {
+.overlay-image-box h5 {
   font-weight: 400;
   margin: 0;
   text-transform: uppercase;
   color: #bbb;
   letter-spacing: 1px;
 }
-.snip1579 blockquote {
+.overlay-image-box blockquote {
   padding: 0;
   margin: 0;
   font-style: italic;
   font-size: 1em;
+  background: none;
 }
-.snip1579 a {
+.overlay-image-box blockquote::before {
+  display: none;
+}
+.overlay-image-box a {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
 }
-.snip1579:hover figcaption,
-.snip1579.hover figcaption {
+.overlay-image-box:hover figcaption,
+.overlay-image-box.hover figcaption {
   height: calc(85%);
 }
