--- a/assets/css/image_overlay_box.css
+++ b/assets/css/image_overlay_box.css
@@ -6,7 +6,7 @@
   position: relative;
   display: inline-block;
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto;
   min-width: 250px;
   max-width: 310px;
   width: 100%;
