--- a/assets/css/image_overlay_fashion.css
+++ b/assets/css/image_overlay_fashion.css
@@ -5,7 +5,7 @@
   position: relative;
   display: inline-block;
   overflow: hidden;
-  margin: 10px auto;
+  margin: 10px auto !important;
   min-width: 250px;
   max-width: 310px;
   width: 100%;
