--- a/assets/css/image_overlay_box.css
+++ b/assets/css/image_overlay_box.css
@@ -86,11 +86,11 @@
   bottom: 0;
   left: 0;
   right: 0;
-  border: none;
+  border: none !important;
 }
 
 .overlay-image-box a:hover {
-  background: none;
+  background: none !important;
 }
 
 .overlay-image-box:hover figcaption,
