--- a/_includes/image_overlay.html
+++ b/_includes/image_overlay.html
@@ -6,7 +6,7 @@
 {% capture overlay_unsplash %}{{ include.unsplash }}{% endcapture %}
 {% capture overlay_maxwidth %}{{ include.maxwidth }}{% endcapture %}
 <div class="overlay_container">
-  <div class="overlay_contents" style="max-width: {% if overlay_maxwidth.size > 0 %}{{ overlay_maxwidth }}{% else %}70%{% endif %};">
+  <div class="overlay_contents" style="max-width: {% if overlay_maxwidth.size > 0 %}{{ overlay_maxwidth }}{% else %}300px{% endif %};">
     {% if overlay_link.size > 0 %}<a class="overlay_a" href="{{ overlay_link }}" target="_blank">
     {% elsif overlay_unsplash.size > 0 %}<a class="overlay_a" href="https://unsplash.com/photos/{{ overlay_unsplash }}" target="_blank">{% endif %}
       <div class="content-overlay"></div>
