--- a/_includes/image_overlay_box.html
+++ b/_includes/image_overlay_box.html
@@ -1,7 +1,9 @@
-<figure class="overlay-image-box"><img src="{{ include.image}}"/>
+<figure class="overlay-image-box" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
+  <img src="{{ include.image}}"/>
   <figcaption>
     <h3>{{ include.title }}</h3>
     <h5>{{ include.subtitle }}</h5>
     <p>{{ include.desc }}</p>
-  </figcaption>{% if include.href.size > 0 %}<a href="{{ include.href }}"></a>{% endif %}
+  </figcaption>
+  {% if include.href.size > 0 %}<a href="{{ include.href }}"></a>{% endif %}
 </figure>
