--- a/assets/css/image_overlay_fashion.css
+++ b/assets/css/image_overlay_fashion.css
@@ -26,6 +26,7 @@
 .overlay-image-fashion img {
   max-width: 100%;
   vertical-align: top;
+  border-radius: 3px;
 }
 
 .overlay-image-fashion figcaption {
