--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,10 @@ layout: default
 	<meta itemprop="wordCount" content="{{ content | strip_html | strip_newlines | number_of_words }}">
 	<meta itemprop="image" content="{{ site.url | append: site.path.hero.high | append: '/' | append: page.hero.url }}" />
 	<meta itemprop="keywords" content="{% for tag in page.tags %}{{ tag | replace: ' ', '_' }}{% unless forloop.last %},{% endunless %}{% endfor %}" />
-	{% if page.has_front_matters_header or page.show_hero %}
+	{% if page.post_has_front_header or page.show_hero %}
 	<!-- BEGIN POST HEADER -->
 	<header>
-		{% if page.has_front_matters_header %}
+		{% if page.post_has_front_header %}
 		<!-- BEGIN FRONT MATTERS HEADER -->
 		<!-- <h1 itemprop="headline name">{{ page.title }}</h1> -->
 		<p class="muted">
@@ -91,7 +91,7 @@ layout: default
 	{% endif %}
 
 	<div itemprop="articleBody">
-		{% if page.has_front_matters_header == false and page.show_hero == false %}
+		{% if page.post_has_front_header == false and page.show_hero == false %}
 		<br />
 		{% endif %}
 		<div class="post_content">
