--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_fashion.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_cycled.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bubble.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/blockquote_layer.css">
 {% for css in page.prelink_css %}
 <link rel="stylesheet" href="{{ css }}">
