--- a/assets/css/image_overlay_box.css
+++ b/assets/css/image_overlay_box.css
@@ -5,7 +5,8 @@
 .overlay-image-box {
   font-family: 'Lato', Arial, sans-serif;
   position: relative;
-  display: inline-block;
+  /* display: inline-block; */
+  display: block;
   overflow: hidden;
   margin: 10px auto !important;
   min-width: 250px;
