--- a/_includes/layout_footer.html
+++ b/_includes/layout_footer.html
@@ -12,7 +12,7 @@
         <h6 class="footer-h6">Post Tags</h6>
         <ul class="footer-links-list">
           {% for tag in site.tags limit: site.data.footer.quicklinks.size %}
-          <li class="footer-li"><a class="footer-a" href="{{ site.url }}/posts/tags/index.html#{{ tag[0] | replace: ' ', '_' }}">{{ tag[0] | replace: ' ', '_' }}</a></li>
+          <li class="footer-li"><a class="footer-a" href="{{ site.url }}/posts/tags/index.html#{{ tag[0] | replace: ' ', '_' }}">{{ tag[0] }}</a></li>
           {% endfor %}
           <!-- <li class="footer-li"><a class="footer-a" href="{{ site.url }}/sample/index.html">Sample Doc</a></li> -->
         </ul>
