--- a/_includes/card_profile_bordered.html
+++ b/_includes/card_profile_bordered.html
@@ -5,9 +5,9 @@
     <h4>{{ include.subtitle }}</h4>
     <p class="bordered-profile-card-p">{{ include.desc }}</p>
     <div class="icons">
-      {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="ion-ios-home"></i></a>{% endif %}
-      {% if include.email.size > 0 %}<a href="mailto:{{ include.email }}"><i class="ion-ios-email"></i></a>{% endif %}
-      {% if include.phone.size > 0 %}<a href="tel:{{ include.phone }}"><i class="ion-ios-telephone"></i></a>{% endif %}
+      {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="fa fa-home"></i></a>{% endif %}
+      {% if include.email.size > 0 %}<a href="mailto:{{ include.email }}"><i class="fa fa-email"></i></a>{% endif %}
+      {% if include.phone.size > 0 %}<a href="tel:{{ include.phone }}"><i class="fa fa-telephone"></i></a>{% endif %}
     </div>
   </figcaption>
 </figure>
