--- a/_includes/card_profile_bubble.html
+++ b/_includes/card_profile_bubble.html
@@ -1,10 +1,10 @@
 <figure class="card-profile-bubble">
   <div class="profile-image"><img src="{{ include.image }}" />
     <div class="icons">
-      {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="ion-ios-home"></i></a>{% endif %}
-      {% if include.github.size > 0 %}<a href="{{ include.github }}" target="_blank"><i class="ion-ios-github"></i></a>{% endif %}
-      {% if include.email.size > 0 %}<a href="mailto:{{ include.email }}"><i class="ion-ios-email"></i></a>{% endif %}
-      {% if include.phone.size > 0 %}<a href="tel:{{ include.phone }}"><i class="ion-ios-telephone"></i></a>{% endif %}
+      {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="fa fa-home"></i></a>{% endif %}
+      {% if include.github.size > 0 %}<a href="{{ include.github }}" target="_blank"><i class="fa fa-github"></i></a>{% endif %}
+      {% if include.email.size > 0 %}<a href="mailto:{{ include.email }}"><i class="fa fa-email"></i></a>{% endif %}
+      {% if include.phone.size > 0 %}<a href="tel:{{ include.phone }}"><i class="fa fa-telephone"></i></a>{% endif %}
     </div>
   </div>
   <figcaption>
