--- a/assets/css/card_profile_bubble.css
+++ b/assets/css/card_profile_bubble.css
@@ -9,7 +9,7 @@
   font-family: 'Open Sans', Arial, sans-serif;
   font-size: 14px;
   line-height: 1.4em;
-  margin: 10px;
+  margin: 10px auto;
   max-width: 315px;
   min-width: 230px;
   position: relative;
