--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
 ---
-{% include card_profile_bubble.html title=site.author subtitle=site.alias desc=site.description url=site.url github="https://github.com/LaSenhorita/LaSenhorita.github.io/" email=site.email image="/assets/images/hero/high/HERO_PAINTINGS_V_0000.jpg" %}
+{% include card_profile_bubble.html title=site.name subtitle=site.alias desc=site.description url=site.url github="https://github.com/LaSenhorita/LaSenhorita.github.io/" email=site.email image="/assets/images/hero/high/HERO_PAINTINGS_V_0000.jpg" maxwidth="100%" %}
 
 {% include signature.html %}
