--- a/_includes/card_profile_bubble.html
+++ b/_includes/card_profile_bubble.html
@@ -1,8 +1,8 @@
 <figure class="card-profile-bubble" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
   <div class="profile-image"><img src="{{ include.image }}" />
     <div class="icons">
-      {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="fa fa-home"></i></a>{% endif %}
-      {% if include.github.size > 0 %}<a href="{{ include.github }}" target="_blank"><i class="fa fa-github"></i></a>{% endif %}
+      {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="fa fa-superpowers"></i></a>{% endif %}
+      {% if include.github.size > 0 %}<a href="{{ include.github }}" target="_blank"><i class="fa fa-github-alt"></i></a>{% endif %}
       {% if include.email.size > 0 %}<a href="mailto:{{ include.email }}"><i class="fa fa-paper-plane"></i></a>{% endif %}
       {% if include.phone.size > 0 %}<a href="tel:{{ include.phone }}"><i class="fa fa-telephone"></i></a>{% endif %}
     </div>
