--- a/_includes/grid_card_profile_cycled_list.html
+++ b/_includes/grid_card_profile_cycled_list.html
@@ -14,20 +14,22 @@
 		<!-- element[2]: desc -->
     <!-- element[3]: image -->
 		<!-- element[4]: url -->
-		<!-- element[5]: email -->
-		<!-- element[6]: phone -->
+		<!-- element[5]: github -->
+	  <!-- element[6]: email -->
+	  <!-- element[7]: phone -->
 		{% endcomment %}
 		{% assign element_title = element[0] %}
 		{% assign element_caption = element[1] %}
 		{% assign element_desc = element[2] %}
     {% assign element_image = element[3] %}
 		{% assign element_url = element[4] %}
-		{% assign element_email = element[5] %}
-		{% assign element_phone = element[6] %}
+		{% assign element_github = element[5] %}
+		{% assign element_email = element[6] %}
+		{% assign element_phone = element[7] %}
 
 		{% capture element_html %}
     <!-- BEGIN CARD PROFILE (BORDERD) -->
-    {% include card_profile_cycled.html title=element_title caption=element_caption desc=element_desc image=element_image url=element_url email=element_email phone=element_phone %}
+    {% include card_profile_cycled.html title=element_title caption=element_caption desc=element_desc image=element_image url=element_url github=element_github email=element_email phone=element_phone %}
     <!-- END CARD PROFILE (BORDERD) -->
 
     {% endcapture %}
