--- a/_includes/grid_image_overlay_fashion_posts_list.html
+++ b/_includes/grid_image_overlay_fashion_posts_list.html
@@ -21,4 +21,4 @@
 
 {% assign outer_list = '' | split: '/' %}
 {% assign outer_list = outer_list | push: converted_list %}
-{% include grid_image_overlay_fashion_list.html list=outer_list title=include.title title_url=include.title_url desc=include.desc readmore=include.readmore readmore_title=include.readmore_title cols=include.cols %}
+{% include grid_image_overlay_fashion_list.html sectionid=include.sectionid list=outer_list title=include.title title_url=include.title_url desc=include.desc readmore=include.readmore readmore_title=include.readmore_title cols=include.cols %}
