--- a/assets/css/image_overlay_lines.css
+++ b/assets/css/image_overlay_lines.css
@@ -5,7 +5,7 @@ figure.overlay-image-lines {
   font-family: 'Raleway', Arial, sans-serif;
   position: relative;
   overflow: hidden;
-  margin: 10px auto;
+  margin: 10px auto !important;
   min-width: 230px;
   max-width: 315px;
   width: 100%;
